Serve frontend using Flask

--- a/templates/result.html
+++ b/templates/result.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+<link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
 
 <head>
     <title>ADHD Screening Result</title>
